Improve code a little bit
closes #5735